	FIX: Track Tiles should override shouldRefresh() to prevent metadata changes from wiping the TileEntity.
	FIX: Fix particle velocity values.
	FIX: Ensure that Gears and Plates are initialized in pre-init when Factory is disabled and Locomotives are enabled.
	FIX: Fix the broken code that allowed the Furnace Cart to accept any type of Fuel.
	FIX: Fix Locomotive shift-clicking.

9.4.0.2:
	NEW: Add Packed Ice Stairs and Slabs.
	NEW: Added Less Than/Greater Than modes to the Item Detector.
	NEW: Add a new Routing Table conditional, "Type=<modid:itemname>", for matching against Minecart item names.
	NEW: Add new Routing Table conditionals, "Ridden=<true/false>" and "Riding=<username>", for checking if someone is riding a train.
	NEW: Modify the Routing Table "Name=" conditional to accept "null" to indicate that the Minecart does not have a custom name.
	CONFIG: Add config option to explicitly disable the generation of new Tracking Aura blocks.

9.4.0.1:
	CHANGE: Loosen up fluid transfer rates for Tanks and Boilers, we want to support mods other than Buildcraft better.
	FIX: Track Layer now ignores plants. (Yopu)
	FIX: Possible fix for IC2 EnergyNet issues (Issue #404)
	FIX: Various minor fixes to Force Tracks. Make unbreakable and remove from creative.
	FIX: Tweak track item creation, should eliminate stacking issues.
	FIX: Locomotives shouldn't forget Emblems when broken.
	FIX: Add a hack to keep Gregtech from removing my Locomotive Painting and Emblem recipes.

9.4.0.0:
	FIX: Fix Emblems for Electric Locomotives (Issue #365)

9.3.3.7:
	INFO: 9.4 test release.
	INFO: Updated BC API to Buildcraft 6.1.7-6.1.8
	NEW: Added Force Track Emitter, uses Charge to project energy tracks.
	NEW: Added Copper Plates.
	CHANGE: Information reported by the Electric Meter has been improved.
	CHANGE: Poor Ore now produces two Nuggets.
	API: Electricity package was updated to allow usage tracking of charge.
	API: Add Rock Crusher Recipe InterModComm message. (genymedes01)